Styled and wrote contact and events

--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,16 @@
 
   </header>
 
+<div class="container-fluid center-block">
+  <h3 class="contact">Drop me a line <a href="mailto:laurenrutherford07@gmail.com?Subject=Portfolio%20Site"> via email</a></h3>
+  <p class="contact-body"><strong>Or follow me at:</strong></p>
+  <p class="contact-body"><strong>Twitter:</strong> <a href="https://twitter.com/_LaurenR" target="_blank">@_LaurenR</a></p>
+  <p class="contact-body"><strong>Instagram:</strong> <a href="https://www.instagram.com/_laurenr07/" target="_blank">@_LaurenR07</a></p>
+  <p class="contact-body"><strong>Pinterest:</strong> <a href="https://www.pinterest.com/_LaurenR/" target="_blank">@_LaurenR</a></p>
+  <p class="contact-body"><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/lmrutherford" target="_blank">Lauren Rutherford</a></p>
+
+</div>
+
   <div class="container-fluid center-block"
   <footer>
     <ul class="row footer-icons">
