--- a/events.html
+++ b/events.html
@@ -11,6 +11,7 @@
   <link href="/Personal-Portfolio/assets/css/portfolio.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,700,300italic,400italic,400' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="icon" href="assets/images/flavicon.ico" type="image/ico"/>
 </head>
 
 <body>
@@ -37,21 +38,33 @@
   </header>
 
   <div>
-    <ul class="row">
-      <li class="col-xs-3"><img src="assets/images/JaneGoodall-23.jpg" alt="Lauren Rutherford in fancy type" class="displayed"></li>
-      <li class="col-xs-6"><img src="assets/images/Photo Sep 18, 12 36 52 AM.jpeg" alt="Lauren Rutherford in fancy type" class="displayed"></li>
-      <li class="col-xs-3"><img src="assets/images/DSC_5576.jpg" alt="Lauren Rutherford in fancy type" class="displayed"></li>
-    </ul>
+    <img src="assets/images/JaneGoodall-23.jpg" alt="Photo me standing with Jane Goodall" class="displayed">
   </div>
 
-<div class="container-fluid center-block">
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque porttitor nisl vel euismod tempor. Pellentesque fermentum vestibulum ligula, in placerat eros vestibulum quis. Donec venenatis id augue vitae semper. Cras vel nibh pretium purus gravida fringilla. Morbi lobortis blandit risus at viverra. In non tortor ut arcu efficitur convallis. Donec eget lorem non massa commodo feugiat.</p>
+<div class="container-fluid center-block about-body">
+  <p>When I stepped foot on the University of Missouri campus in 2012, I never imagined event planning as part of my college career. For three years, I had the pleasure of organizing, marketing and executing seven speaking events as part of the Department of Student Activities Speakers Committee. I spent two of those semesters as an assistant to the committee’s leadership, and the final two semesters leading the committee as Junior Chair and finally Senior Chair.</p>
 
-  <p>Vestibulum rhoncus tellus at posuere egestas. Vestibulum fringilla, nibh vitae pretium imperdiet, felis magna pharetra neque, ac blandit augue sem at odio. Sed et mi tristique turpis congue aliquam eget sed arcu. Praesent lorem ex, elementum in vestibulum non, aliquet et ipsum. Etiam venenatis elementum urna ut tincidunt. Sed metus enim, tempor nec dolor nec, dictum viverra lorem. Sed eget augue sapien. Maecenas vel leo vel nulla pellentesque gravida gravida et lacus. Nulla at nibh a dolor placerat tincidunt non sit amet est. Duis eget lobortis tellus, non consequat ex.</p>
+  <p class="block-text"><em> My biggest accomplishment: Bringing Jane Goodall to MU for a 4,000 seat sold out show in Mizzou Arena.</em></p>
 
-  <p>Donec et ligula eu augue imperdiet imperdiet. Suspendisse tempus ornare velit, sit amet pharetra sapien volutpat in. Maecenas rutrum nec ante at rutrum. Nullam malesuada dui mauris, venenatis iaculis nibh venenatis vel. Ut sit amet lorem varius, faucibus sapien a, ullamcorper leo. Donec sagittis mi ut fermentum pharetra. Proin vehicula cursus rutrum. Aliquam erat volutpat. Nullam imperdiet sem sed eleifend ultrices.</p>
+  <img src="assets/images/mizzou-arena.jpeg" alt="Photo of a sold out Mizzou Arena" class="displayed" id="mizzou-arena">
 
-  <p>Fusce ultricies sapien ut ligula consectetur, in iaculis tortor dictum. In sed eleifend tellus. Vestibulum convallis turpis lacus, at porttitor lorem dapibus facilisis. Aenean dignissim varius arcu vitae malesuada. Nam suscipit et velit quis facilisis. In ut fringilla massa, egestas iaculis nunc. Suspendisse potenti. Quisque mattis ultricies eros eget facilisis. Maecenas maximus diam nulla, nec euismod leo fermentum eu. Praesent lectus ligula, dictum nec rhoncus sit amet, semper at metus. Nam dolor lacus, tristique ac gravida et, maximus a nibh. Nunc ultricies mi quis nisl vulputate tincidunt. Integer tempor consequat maximus.</p>
+  <p>As a Speakers Committee leader I:</p>
+
+  <ul class="speakers-list">
+    <li class="speakers-list">Brainstormed speaker names and tested the market for receptiveness.</li>
+    <li class="speakers-list">Worked with speaking agencies such as CAA, Keppler and WMA to negotiate pricing and contracts.</li>
+    <li class="speakers-list">Booked speakers and managed a $55,000 annual budget.</li>
+    <li class="speakers-list">Organized and booked transportation, hotel rooms, speaking venues, reception locations, dinner reservations and more for speaking events and speakers.</li>
+    <li class="speakers-list">Worked with the Student Design Center to brainstorm and create promotional materials. I wrote the event information and speaker biography for each event.</li>
+    <li class="speakers-list">Coordinated on-campus promotion efforts, including handbills, TV plasma ads, web sliders, sandwich boards, fliers and guerrilla marketing.</li>
+    <li class="speakers-list">Assisted the Marketing Committee with citywide promotions using Facebook events and promoted posts, radio and TV ads, newspaper ads and more.</li>
+    <li class="speakers-list">Acted as liaison between speaker and staff upon the talent’s arrival in Columbia. Escorted the talent between scheduled events and managed needs.</li>
+    <li class="speakers-list">Organized book signings, press conferences and receptions for events.</li>
+    <li class="speakers-list">Wrote press releases and worked with the MU News Bureau to coordinate media coverage of events.</li>
+  </ul>
+
+  <p><strong>If you would like to know more about my experience as an event planner, please contact me at laurenrutherford07[at]gmail.com</strong></p>
+
 </div>
 
 <div class="container-fluid center-block"
