Finished the front page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="/Personal-Portfolio/assets/css/portfolio.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,700,300italic,400italic,400' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="icon" href="assets/images/flavicon.ico" type="image/ico"/>
 </head>
 
 <body>
@@ -39,28 +40,18 @@
 
 
 
-  <div class="row">
+  <div>
 
-    <ul>
+    <ul class="row">
       <li class="col-xs-2"></li>
-    </ul>
-
-    <div class="col-xs-4">
-      <img src="assets/images/headshot-placeholder.jpg" alt="lauren rutherford headshot placeholder">
-    </div>
-
-
-    <div class="col-xs-4">
-      <h2>FAST FACTS:</h2>
-      <h3>Headline three sample</h3>
-      <p>I'm Lauren. I'm a writer with a background in magazine writing and editing. In December, I'll graduate from the Missouri School of Journalism with a bachelors in journalism, emphasis in magazine writing and a minor in Portuguese.
-
-      Currently, I contribute to KC magazine's internet outlet, ThisIsKC.com, to Feast magazine's web section called "The Feed" and to TulsaPeople magazine. In September, I will travel to Atlanta to represent the University of Missouri as a student ambassador at the SEC Symposium and jet off to Las Vegas as a Society of American Travel Writers annual conference intern.
-
-      This semester I'm recoding this website from scratch (my senior honor's project), so please use the teal buttons to learn more about me.</p>
-    </div>
-
-    <ul>
+      <li class="col-xs-4">
+        <img src="assets/images/headshot-placeholder.jpg" alt="lauren rutherford headshot placeholder"></li>
+      <li class="col-xs-4">
+        <h2>HELLO!</h2>
+        <p>I'm Lauren: A writer with a background in magazine writing, editing and social media curation. Take a look at what I've been up to, and contact me if you have any questions!</p>
+        <h3>Fast Facts:</h3>
+        <p><strong>Academic pursuits:</strong> I'm about to graduate from the University of Missouri with a bachelors of Journalism with an emphasis in magazine writing and a minor in Luso-Brazilian studies (Portuguese).</p>
+        <p><strong>Post-grad plans:</strong> Now accepting freelance projects and full-time job offers. Until then, you can kicking it at Old Navy.</p></li>
       <li class="col-xs-2"></li>
     </ul>
 
