--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
       <img src="assets/images/engagement.jpg" alt="Picture of Lauren Rutherford" class="displayed">
     </div>
 
-    <div class="container-fluid center-block about-body">
+    <div class="container-fluid center-block body">
         <p>In 5th grade, I knew I wanted to be a journalist. I even started my own newspaper for my 5th grade class; it featured my mad Word Art skills and Microsoft Word design chops circa 2005.</p>
         <p>Since then, I’ve graduated to InDesign and more distinguished editorial pursuits. In 2012, I moved from my hometown of Tulsa, Oklahoma, to Columbia, Missouri, to study journalism at the University of Missouri. I’ve graduated from that, too, in December 2015.</p>
         <p>Currently, I contribute to KC magazine and Feast magazine. This past summer I worked as an editorial intern at KC magazine and as a contributing writer for Vox magazine. City and regional magazines are my jam, but I’m also partial to trend pieces about food, travel and culture.</p>
