--- a/events.html
+++ b/events.html
@@ -41,7 +41,7 @@
     <img src="assets/images/JaneGoodall-23.jpg" alt="Photo me standing with Jane Goodall" class="displayed">
   </div>
 
-<div class="container-fluid center-block about-body">
+<div class="container-fluid center-block body">
   <p>When I stepped foot on the University of Missouri campus in 2012, I never imagined event planning as part of my college career. For three years, I had the pleasure of organizing, marketing and executing seven speaking events as part of the Department of Student Activities Speakers Committee. I spent two of those semesters as an assistant to the committee’s leadership, and the final two semesters leading the committee as Junior Chair and finally Senior Chair.</p>
 
   <p class="block-text"><em> My biggest accomplishment: Bringing Jane Goodall to MU for a 4,000 seat sold out show in Mizzou Arena.</em></p>
