--- a/index.html
+++ b/index.html
@@ -42,17 +42,15 @@
 
   <div>
 
-    <ul class="row">
-      <li class="col-xs-2"></li>
-      <li class="col-xs-4">
+    <ul class="row body">
+      <li class="col-xs-6">
         <img src="assets/images/headshot-placeholder.jpg" alt="lauren rutherford headshot placeholder"></li>
-      <li class="col-xs-4">
-        <h2>HELLO!</h2>
+      <li class="col-xs-6">
+        <h2 id="hello-align">HELLO!</h2>
         <p>I'm Lauren: A writer with a background in magazine writing, editing and social media curation. Take a look at what I've been up to, and contact me if you have any questions!</p>
         <h3>Fast Facts:</h3>
         <p><strong>Academic pursuits:</strong> I'm about to graduate from the University of Missouri with a bachelors of Journalism with an emphasis in magazine writing and a minor in Luso-Brazilian studies (Portuguese).</p>
         <p><strong>Post-grad plans:</strong> Now accepting freelance projects and full-time job offers. Until then, you can kicking it at Old Navy.</p></li>
-      <li class="col-xs-2"></li>
     </ul>
 
   </div>
