--- a/work.html
+++ b/work.html
@@ -40,7 +40,7 @@
 
   </header>
 
-  <div class="container-fluid center-block work-body text-over-picture">
+  <div class="container-fluid center-block body text-over-picture">
     <a href="javascript:hideshow(document.getElementById('one'))"><h1 class="text">WRITING</h1></a>
   </div>
 
@@ -55,7 +55,7 @@
                   }
                   </script>
 
-  <div class="container-fluid center-block work-body" id="one" style="display: none">
+  <div class="container-fluid center-block body" id="one" style="display: none">
     <div>
       <div class="resume-spacing">
         <ul class="row">
@@ -225,7 +225,7 @@
 
   <div class="button-padding"></div>
 
-  <div class="container-fluid center-block work-body text-over-picture">
+  <div class="container-fluid center-block body text-over-picture">
     <a href="javascript:hideshow(document.getElementById('two'))"><h1 class="text">SOCIAL MEDIA</h1></a>
   </div>
 
@@ -240,7 +240,7 @@
                       }
                       </script>
 
-    <div class="container-fluid center-block work-body" id="two" style="display: none">
+    <div class="container-fluid center-block body" id="two" style="display: none">
       <div>
         <div class="resume-spacing">
           <ul class="row">
@@ -322,7 +322,7 @@
 
 <div class="button-padding"></div>
 
-    <div class="container-fluid center-block work-body text-over-picture">
+    <div class="container-fluid center-block body text-over-picture">
       <a href="javascript:hideshow(document.getElementById('three'))"><h1 class="text">EDITING</h1></a>
     </div>
 
@@ -337,7 +337,7 @@
                 }
                 </script>
 
-    <div class="container-fluid center-block work-body" id="three" style="display: none">
+    <div class="container-fluid center-block body" id="three" style="display: none">
       <div>
         <div class="resume-spacing">
           <ul class="row">
@@ -397,7 +397,7 @@
 
     <div class="button-padding"></div>
 
-    <div class="container-fluid center-block work-body text-over-picture">
+    <div class="container-fluid center-block body text-over-picture">
       <a href="javascript:hideshow(document.getElementById('four'))"><h1 class="text">DIGITAL DESIGN</h1></a>
     </div>
 
@@ -412,7 +412,7 @@
                   }
                   </script>
 
-      <div class="container-fluid center-block work-body" id="four" style="display: none">
+      <div class="container-fluid center-block body" id="four" style="display: none">
         <div>
           <div class="resume-spacing">
           <ul class="row">
