--- a/work.html
+++ b/work.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Lauren Rutherford">
   <meta name="description" content="Lauren Rutherford Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="/Personal-Portfolio/assets/css/portfolio.css" rel="stylesheet" type="text/css">
+  <link href="assets/css/portfolio.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,700,300italic,400italic,400' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link href="/Personal-Portfolio/assets/css/portfolio.css" rel="stylesheet" type="text/css">
