--- a/events.html
+++ b/events.html
@@ -42,7 +42,7 @@
   </div>
 
 <div class="container-fluid center-block body">
-  <p>When I stepped foot on the University of Missouri campus in 2012, I never imagined event planning as part of my college career. For three years, I had the pleasure of organizing, marketing and executing seven speaking events as part of the Department of Student Activities Speakers Committee. I spent two of those semesters as an assistant to the committee’s leadership, and the final two semesters leading the committee as Junior Chair and finally Senior Chair.</p>
+  <p>When I stepped foot on the University of Missouri campus in 2012, I never imagined event planning as part of my college career. For three years, I had the pleasure of organizing, marketing and executing seven speaking events as part of the Department of Student Activities Speakers Committee. I spent two of those semesters as an assistant to the committee’s leadership and the final two semesters leading the committee as Junior Chair and finally Senior Chair.</p>
 
   <p class="block-text"><em> My biggest accomplishment: Bringing Jane Goodall to MU for a 4,000 seat sold out show in Mizzou Arena.</em></p>
 
@@ -52,7 +52,7 @@
 
   <ul class="speakers-list">
     <li class="speakers-list">Brainstormed speaker names and tested the market for receptiveness.</li>
-    <li class="speakers-list">Worked with speaking agencies such as CAA, Keppler and WMA to negotiate pricing and contracts.</li>
+    <li class="speakers-list">Worked with speaking agencies such as CAA, Keppler and WME to negotiate pricing and contracts.</li>
     <li class="speakers-list">Booked speakers and managed a $55,000 annual budget.</li>
     <li class="speakers-list">Organized and booked transportation, hotel rooms, speaking venues, reception locations, dinner reservations and more for speaking events and speakers.</li>
     <li class="speakers-list">Worked with the Student Design Center to brainstorm and create promotional materials. I wrote the event information and speaker biography for each event.</li>
