--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <html>
 <head>
   <title>Home</title>
+
+  <!-- ———————————————————————————————————————————————————————————————————
+
+  		Hi. Thanks for checking out the source code.
+  		This site was handcrafted by yours truly.
+
+  ———————————————————————————————————————————————————————————————————————— -->
+
   <meta charset="utf-8">
   <meta name="author" content="Lauren Rutherford">
   <meta name="description" content="Lauren Rutherford Portfolio">
@@ -49,8 +57,8 @@
         <h2 id="hello-align">HELLO!</h2>
         <p>I'm Lauren: A writer with a background in magazine writing, editing and social media curation. Take a look at what I've been up to, and contact me if you have any questions!</p>
         <h3>Fast Facts:</h3>
-        <p><strong>Academic pursuits:</strong> I'm about to graduate from the University of Missouri with a bachelors of Journalism with an emphasis in magazine writing and a minor in Luso-Brazilian studies (Portuguese).</p>
-        <p><strong>Post-grad plans:</strong> Now accepting freelance projects and full-time job offers. Until then, you can kicking it at Old Navy.</p></li>
+        <p><strong>Academic pursuits:</strong> I just graduated from the University of Missouri with a bachelors of Journalism and a minor in Luso-Brazilian studies (Portuguese).</p>
+        <p><strong>Post-grad plans:</strong> Now accepting freelance projects and full-time job offers. Until then, you can find me kicking it at Old Navy and writing for <em>Feast</em> and <em>KC</em> magazines.</p></li>
     </ul>
 
   </div>
