--- a/about.html
+++ b/about.html
@@ -43,8 +43,8 @@
 
     <div class="container-fluid center-block body">
         <p>In 5th grade, I knew I wanted to be a journalist. I even started my own newspaper for my 5th grade class; it featured my mad Word Art skills and Microsoft Word design chops circa 2005.</p>
-        <p>Since then, I’ve graduated to InDesign and more distinguished editorial pursuits. In 2012, I moved from my hometown of Tulsa, Oklahoma, to Columbia, Missouri, to study journalism at the University of Missouri. I’ve graduated from that, too, in December 2015.</p>
-        <p>Currently, I contribute to KC magazine and Feast magazine. This past summer I worked as an editorial intern at KC magazine and as a contributing writer for Vox magazine. City and regional magazines are my jam, but I’m also partial to trend pieces about food, travel and culture.</p>
+        <p>Since then, I graduated to InDesign and more distinguished editorial endeavors. In 2012, I moved from my hometown of Tulsa, Oklahoma, to Columbia, Missouri, to study journalism at the University of Missouri. I’ve graduated from that, too, in December 2015.</p>
+        <p>Currently, I contribute to <em>KC magazine</em> and <em>Feast</em> magazine. This past summer I worked as an editorial intern at <em>KC</em> magazine and as a contributing writer for <em>Vox</em> magazine. City and regional magazines are my jam, but I’m also partial to trend pieces about food, travel and culture.</p>
         <h3>What I'm reading:</h3>
           <ul>
             <li class="about-list"><a href="http://lilyellyn.com/" target="_blank">Such Small Hands</a></li>
