--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   ———————————————————————————————————————————————————————————————————————— -->
 
   <meta charset="utf-8">
-  <meta name="author" content="Lauren Rutherford">
-  <meta name="description" content="Lauren Rutherford Portfolio">
+  <meta name="author" content="Lauren Miers">
+  <meta name="description" content="Lauren Miers Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="assets/css/portfolio.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,700,300italic,400italic,400' rel='stylesheet' type='text/css'>
@@ -37,7 +37,6 @@
         <li class="col-xs-1"><a href="about.html">About</a></li>
         <li class="col-xs-1"><a href="work.html">Work</a></li>
         <li class="col-xs-1"><a href="events.html">Events</a></li>
-        <li class="col-xs-1"><a href="https://medium.com/@laurenrutherford07" target="_blank">Blog</a></li>
         <li class="col-xs-1" id="last-nav"><a href="contact.html">Contact</a></li>
         <li class="col-xs-3"></li>
       </ul>
@@ -57,8 +56,9 @@
         <h2 id="hello-align">HELLO!</h2>
         <p>I'm Lauren: A writer with a background in magazine writing, editing and social media curation. Take a look at what I've been up to, and contact me if you have any questions!</p>
         <h3>Fast Facts:</h3>
-        <p><strong>Academic pursuits:</strong> I just graduated from the University of Missouri with a bachelors of Journalism and a minor in Luso-Brazilian studies (Portuguese).</p>
-        <p><strong>Post-grad plans:</strong> Now accepting freelance projects and full-time job offers. Until then, you can find me kicking it at Old Navy and writing for <em>Feast</em> and <em>KC</em> magazines.</p></li>
+        <p><strong>Academic pursuits:</strong> I graduated in December 2015 from the University of Missouri with a bachelors of Journalism and a minor in Luso-Brazilian studies (Portuguese).</p>
+        <p><strong>What I'm up to now:</strong>I'm the Communication Specialist for the Missouri Annual Conference of the United Methodist Church.</p>
+        <p><strong>Side-hustles:</strong>Brushing up on my Portuguese skills and freelance writing for <em>Feast</em> magazine and others.</p>
     </ul>
 
   </div>
@@ -68,12 +68,12 @@
   <ul class="row footer-icons">
     <li class="col-xs-2"></li>
     <li class="col-xs-4">
-      <p id="copyright">&copy;2015 Lauren Rutherford</p>
+      <p id="copyright">&copy;2016 Lauren Miers</p>
     </li>
     <li class="col-xs-4">
       <a href="https://twitter.com/_LaurenR" target="_blank"><i class="fa fa-twitter-square fa-2x"></a></i>
       <a href="https://www.linkedin.com/in/lmrutherford" target="_blank"><i class="fa fa-linkedin-square fa-2x"></a></i>
-      <a href="https://www.instagram.com/_laurenr07/" target="_blank"><i class="fa fa-instagram fa-2x"></a></i>
+      <a href="https://www.instagram.com/_laurenm07/" target="_blank"><i class="fa fa-instagram fa-2x"></a></i>
       <a href="https://www.pinterest.com/_LaurenR/" target="_blank"><i class="fa fa-pinterest-square fa-2x"></a></i>
     </li>
     <li class="col-xs-2"></li>
