--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
 <head>
   <title>About</title>
   <meta charset="utf-8">
-  <meta name="author" content="Lauren Rutherford">
-  <meta name="description" content="Lauren Rutherford Portfolio">
+  <meta name="author" content="Lauren Miers">
+  <meta name="description" content="Lauren Miers Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="assets/css/portfolio.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,700,300italic,400italic,400' rel='stylesheet' type='text/css'>
@@ -29,7 +29,6 @@
         <li class="col-xs-1"><a href="about.html" id="selected-page">About</a></li>
         <li class="col-xs-1"><a href="work.html">Work</a></li>
         <li class="col-xs-1"><a href="events.html">Events</a></li>
-        <li class="col-xs-1"><a href="https://medium.com/@laurenrutherford07" target="_blank">Blog</a></li>
         <li class="col-xs-1" id="last-nav"><a href="contact.html">Contact</a></li>
         <li class="col-xs-3"></li>
       </ul>
@@ -38,7 +37,7 @@
   </header>
 
     <div>
-      <img src="assets/images/engagement.jpg" alt="Picture of Lauren Rutherford" class="displayed">
+      <img src="assets/images/engagement.jpg" alt="Picture of Lauren Miers" class="displayed">
     </div>
 
     <div class="container-fluid center-block body">
@@ -50,25 +49,28 @@
             <li class="about-list"><a href="http://lilyellyn.com/" target="_blank">Such Small Hands</a></li>
             <li class="about-list"><a href="http://www.humansofnewyork.com/" target="_blank">Humans of New York</a></li>
             <li class="about-list"><em>Daring Greatly</em> by Brene Brown</li>
-            <li class="about-list"><em>You Can Change</em> by Tim Chester</li>
-            <li class="about-list"><em>Making a Literary</em> Life by Carolyn See</li>
+            <li class="about-list"><em>One Plus One</em> by Jojo Moyes</li>
+            <li class="about-list"><em>Attachments</em> by Rainbow Rowell</li>
           </ul>
     </div>
 
-  <div class="container-fluid center-block">
-  <footer>
-    <ul class="row footer-icons">
-      <li class="col-xs-2"></li>
-      <li class="col-xs-4">
-        <p id="copyright">&copy;2015 Lauren Rutherford</p>
-      </li>
-      <li class="col-xs-4">
-        <a href="https://twitter.com/_LaurenR" target="_blank"><i class="fa fa-twitter-square fa-2x"></a></i>
-        <a href="https://www.linkedin.com/in/lmrutherford" target="_blank"><i class="fa fa-linkedin-square fa-2x"></a></i>
-        <a href="https://www.instagram.com/_laurenr07/" target="_blank"><i class="fa fa-instagram fa-2x"></a></i>
-        <a href="https://www.pinterest.com/_LaurenR/" target="_blank"><i class="fa fa-pinterest-square fa-2x"></a></i>
-      </li>
-      <li class="col-xs-2"></li>
-    </ul>
-  </footer>
-  </div>
+    <div class="container-fluid center-block"
+    <footer>
+      <ul class="row footer-icons">
+        <li class="col-xs-2"></li>
+        <li class="col-xs-4">
+          <p id="copyright">&copy;2016 Lauren Miers</p>
+        </li>
+        <li class="col-xs-4">
+          <a href="https://twitter.com/_LaurenR" target="_blank"><i class="fa fa-twitter-square fa-2x"></a></i>
+          <a href="https://www.linkedin.com/in/lmrutherford" target="_blank"><i class="fa fa-linkedin-square fa-2x"></a></i>
+          <a href="https://www.instagram.com/_laurenm07/" target="_blank"><i class="fa fa-instagram fa-2x"></a></i>
+          <a href="https://www.pinterest.com/_LaurenR/" target="_blank"><i class="fa fa-pinterest-square fa-2x"></a></i>
+        </li>
+        <li class="col-xs-2"></li>
+      </ul>
+    </footer>
+    </div>
+
+    </body>
+    </html>
