--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
 <head>
   <title>Contact</title>
   <meta charset="utf-8">
-  <meta name="author" content="Lauren Rutherford">
-  <meta name="description" content="Lauren Rutherford Portfolio">
+  <meta name="author" content="Lauren Miers">
+  <meta name="description" content="Lauren Miers Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="assets/css/portfolio.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,700,300italic,400italic,400' rel='stylesheet' type='text/css'>
@@ -29,7 +29,6 @@
         <li class="col-xs-1"><a href="about.html">About</a></li>
         <li class="col-xs-1"><a href="work.html">Work</a></li>
         <li class="col-xs-1"><a href="events.html">Events</a></li>
-        <li class="col-xs-1"><a href="https://medium.com/@laurenrutherford07" target="_blank">Blog</a></li>
         <li class="col-xs-1" id="last-nav"><a href="contact.html" id="selected-page">Contact</a></li>
         <li class="col-xs-3"></li>
       </ul>
@@ -39,29 +38,32 @@
   </header>
 
 <div class="container-fluid center-block">
-  <h3 class="contact">Drop me a line <a href="mailto:laurenrutherford07@gmail.com?Subject=Portfolio%20Site"> via email</a></h3>
+  <h3 class="contact">Drop me a line <a href="mailto:laurenmiers07@gmail.com?Subject=Portfolio%20Site"> via email</a></h3>
   <p class="contact-body"><strong>Or follow me at:</strong></p>
   <p class="contact-body"><strong>Twitter:</strong> <a href="https://twitter.com/_LaurenR" target="_blank">@_LaurenR</a></p>
-  <p class="contact-body"><strong>Instagram:</strong> <a href="https://www.instagram.com/_laurenr07/" target="_blank">@_LaurenR07</a></p>
+  <p class="contact-body"><strong>Instagram:</strong> <a href="https://www.instagram.com/_laurenm07/" target="_blank">@_LaurenR07</a></p>
   <p class="contact-body"><strong>Pinterest:</strong> <a href="https://www.pinterest.com/_LaurenR/" target="_blank">@_LaurenR</a></p>
   <p class="contact-body"><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/lmrutherford" target="_blank">Lauren Rutherford</a></p>
 
 </div>
 
-  <div class="container-fluid center-block"
-  <footer>
-    <ul class="row footer-icons">
-      <li class="col-xs-2"></li>
-      <li class="col-xs-4">
-        <p id="copyright">&copy;2015 Lauren Rutherford</p>
-      </li>
-      <li class="col-xs-4">
-        <a href="https://twitter.com/_LaurenR" target="_blank"><i class="fa fa-twitter-square fa-2x"></a></i>
-        <a href="https://www.linkedin.com/in/lmrutherford" target="_blank"><i class="fa fa-linkedin-square fa-2x"></a></i>
-        <a href="https://www.instagram.com/_laurenr07/" target="_blank"><i class="fa fa-instagram fa-2x"></a></i>
-        <a href="https://www.pinterest.com/_LaurenR/" target="_blank"><i class="fa fa-pinterest-square fa-2x"></a></i>
-      </li>
-      <li class="col-xs-2"></li>
-    </ul>
-  </footer>
-  </div>
+<div class="container-fluid center-block"
+<footer>
+  <ul class="row footer-icons">
+    <li class="col-xs-2"></li>
+    <li class="col-xs-4">
+      <p id="copyright">&copy;2016 Lauren Miers</p>
+    </li>
+    <li class="col-xs-4">
+      <a href="https://twitter.com/_LaurenR" target="_blank"><i class="fa fa-twitter-square fa-2x"></a></i>
+      <a href="https://www.linkedin.com/in/lmrutherford" target="_blank"><i class="fa fa-linkedin-square fa-2x"></a></i>
+      <a href="https://www.instagram.com/_laurenm07/" target="_blank"><i class="fa fa-instagram fa-2x"></a></i>
+      <a href="https://www.pinterest.com/_LaurenR/" target="_blank"><i class="fa fa-pinterest-square fa-2x"></a></i>
+    </li>
+    <li class="col-xs-2"></li>
+  </ul>
+</footer>
+</div>
+
+</body>
+</html>
